Deprecation fixes