@@ -127,7 +127,7 @@ public class ChangeProfileServlet extends HttpServlet {
 
                     if (item.isFormField()) {
                         if (item.getFieldName().equals("vacationDay")) {
-                            newVacationDays.add(new Integer(item.getString()));
+                            newVacationDays.add(Integer.valueOf(item.getString()));
                         } else {
                             params.put(item.getFieldName(), item.getString("UTF-8"));
                         }
@@ -366,20 +366,20 @@ public class ChangeProfileServlet extends HttpServlet {
 
                         boolean personalizeAdsBool = "Y".equals(personalizeAds);
                         p = new DSGPlayerPreference(
-                                "personalizeAds", new Boolean(personalizeAdsBool));
+                                "personalizeAds", Boolean.valueOf(personalizeAdsBool));
                         dsgPlayerStorer.storePlayerPreference(
                                 dsgPlayerData.getPlayerID(), p);
 
                         boolean emailDsgMessages = email != null && email.equals("Y");
                         p = new DSGPlayerPreference(
-                                "emailDsgMessages", new Boolean(emailDsgMessages));
+                                "emailDsgMessages", Boolean.valueOf(emailDsgMessages));
                         dsgPlayerStorer.storePlayerPreference(
                                 dsgPlayerData.getPlayerID(), p);
 
                         boolean emailSentDsgMessages = emailSent != null &&
                                 emailSent.equals("Y");
                         p = new DSGPlayerPreference(
-                                "emailSentDsgMessages", new Boolean(emailSentDsgMessages));
+                                "emailSentDsgMessages", Boolean.valueOf(emailSentDsgMessages));
                         dsgPlayerStorer.storePlayerPreference(
                                 dsgPlayerData.getPlayerID(), p);
 
